Fix: Fix the immutable list